No noté cambios al modificar eso, pero bueno :3

--- a/main.css
+++ b/main.css
@@ -17,7 +17,7 @@
 #rojo{
 	background-color: red;
 }
-.clearfix:after, .clearfix:after {
+.clearfix:after, .clearfix:before {
 	content: "";
 	display: table;
 }
